--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "fastapi>=0.116.1",
+    "uvicorn>=0.35.0",
+]
 
 [project.optional-dependencies]
 # Development / QA toolchain for pre-commit
