--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dev = [
     "pre-commit>=3.8.0",
     "ruff>=0.5.5",
     "mypy>=1.10.0",
+    "pytest>=8.2.0",
 ]
 
 [tool.ruff]
@@ -40,6 +41,9 @@ ignore = [
   "E501",
 ]
 
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = ["S101"]
+
 [tool.ruff.format]
 # Use Ruff's formatter (Black-compatible)
 quote-style = "double"
@@ -60,3 +64,8 @@ check_untyped_defs = true
 disallow_incomplete_defs = true
 no_implicit_optional = true
 show_error_codes = true
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+]
