--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.116.1",
+    "requests>=2.32.4",
     "uvicorn>=0.35.0",
 ]
 
